atualizado analise numerica

--- a/3° Semestre/Análise Numérica/Interpolação/main.tex
+++ b/3° Semestre/Análise Numérica/Interpolação/main.tex
@@ -245,6 +245,8 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
 \section{Comparação entre as funções dadas e as funções encontradas}
 
     \subsection{Função do 6.1}
+        \paragraph{} O gráfico abaixo mostra que a interpolação polinomial aproxima-se bastante da função original no intervalo entre \(x = 0\) e \(x = 1{,}5\), mas diverge significativamente fora desse intervalo, especialmente após \(x = 2\), mostrando instabilidade típica em regiões fora dos pontos de interpolação.
+
         \begin{tikzpicture}
         \begin{axis}[
             title={Comparação entre as Funções Polinomiais},
@@ -292,8 +294,12 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
         \end{axis}
         \end{tikzpicture}
 
+\newpage
+
 
     \subsection{Função do 6.2}
+        \paragraph{} O gráfico abaixo mostra que a interpolação polinomial aproxima-se bastante da função original no intervalo apenas no início, mas diverge significativamente conforme o \(x\) aumenta, mostrando a incapacidade de um polinômio de grau 3 em representar o crescimento acentuado de uma função do grau 5.
+
         \begin{tikzpicture}
         \begin{axis}[
             title={Comparação entre as Funções Polinomiais},
